--- a/LaTeX/method.tex
+++ b/LaTeX/method.tex
@@ -4,7 +4,7 @@
 	Most related work focus on one of two things: procedurally generating unique building meshes(TODO: ref) or procedurally generating large cities consisting of similar looking buildings(TODO: ref). This work focuses instead on the procedurally generated placement of authored meshes in varied districts. The concept of districts breaks up the repetitive and self-similar nature of city by introducing distinct changes in appearance between them. During research three stages of generation were recognized: Districts, Blocks and Buildings. Each of these steps use the result of the previous one as starting point, in a top-down, hierarchical manner. Going through these stages is intended to generate a city that feels and looks natural.
 
 		\subsubsection{Districts}
-		The generation process starts with the generation of Districts. A District is an abstract representation of an area of the city. It controls what type of buildings it contains, the minimum and maximum height of these buildings and how densely populated the area is with these buildings. With just these few variables, you can create anything from a sparse industrial district to a dense inner city.(TODO: More stuffs here)
+		The generation process starts with the generation of Districts. A District is an abstract representation of an area of the city. It controls what type of buildings it contains, the minimum and maximum height of these buildings and how densely populated the area is with these buildings. With just these few variables, you can create anything from a sparse industrial district to a dense inner city. The districts have a semi-random deterministic spread across the city. There is no constraints on the distribution of the districts. This means that one seed may produce a city where 90\% is occupied by one district. There are no constraints to prevent this because this would hinder the variability of the cities generated. The districts typically have a lot of blocks where no other districts are competing. But at the borders between districts there is a lot more variation, this is refered to as \textit{border competition}. Here a single block may contain buildings from all three districts. This was done to avoid hard borders between the districts. The hard borders were concidered to look strange and may compromise the cities viability in games. The districts were deemed important as they provide variation throughout the city. (TODO: More stuffs here)
 		
 		\subsubsection{Blocks}
 		The next stage in the process is the generation of Blocks. In this work, a Block is defined as an area enclosed by four roads. Looking at aerial photographs of large cities(TODO: ref) a certain pattern sometimes appears in the way roads are laid out. There is usually a few major roads stretched throughout the city and smaller, perpendicular roads connecting them together. We decided to mimic this style(TODO: Don't use we). Since a block is another abstract representation of an area, it is actually the roads that make them up. The first step of generating blocks is to generate the main roads running through the city. After the main roads have been generated, smaller roads are generated between, connecting them together. After all roads have been generated, the city has affectively been divided into a non-uniform grid. Each cell in this grid is a block. (TODO: This stage does not depend on the previous)
@@ -25,7 +25,19 @@
 		The interface is divided into three sections that are laid out horizontally. The left section is for statistics such as number of buildings in each of the districts, number of roads and the time it took to generate the city. The middle section displays the generated city. The right section of the interface contains controls for altering how the city is generated. There are three parameters per district: minimum height, maximum height and density of buildings. There is also a global parameter called the seed. The seed can alter the look of the city without altering the per-district parameters. When the end user is satisfied with the parameters, they press the 'Generate' button and a city is generated and displayed on the screen.(TODO: Image of the user interface)
 		
 		\subsubsection{Districts}
-		Explain how we generate districts
+		The district PCG generates a 2D grid with cells where each cell contains a district number. Each cell is in the later stages filled with grass, roads or buildings. Each cell within the grid represents an area of land in the city. These areas are square shaped with a length of 10 meters which equates to a total area of 100 square meters for each cell.
+		
+		\par
+		Each district has a starting position; this will be referred to as the districts core. The core position of each district is semi-randomly distributed throughout the city with modified Perlin noise. From the core position each district takes control over all the cells they are closest to. The distance is calculated with Euclidian distance squared. The squared distance is used because this is faster for the computer to calculate than the real distance. The equation where \textbf{A} and \textbf{B} are 2D positions:
+		\begin{equation}
+			EuclideanSquaredDistance = (B1 - A1)^2 + (B2 - A2)^2
+		\end{equation}
+		
+		\par
+		After the districts, have expanded from their core position the borders are clear to see. There are often straight lines where on one side of the line there are skyscrapers and on the other there are industry. To negate this effect somewhat \textit{border competition} was implemented. The algorithm finds every cell where two different districts meet (i.e. One district in the cell and a new district in the cell to the right). 
+		
+		\par
+		Explain Perlin noise in this context
 		
 		\subsubsection{Blocks}
 		After generating districts, the roads are generated (effectively creating blocks). The first step is to generate the main roads running through the city. Main roads always run vertically through the city, no matter what parameters are used. To figure out where the main roads should be, Perlin noise is used. By going through the cells of the map horizontally and checking if the Perlin noise for that cell is above a certain threshold, Elicras determines if that cell should be a main road or not. Since the main roads run through the whole city, the algorithm only goes through the first row of cells. If the algorithm determines that a cell should contain a main road, it sets the value of that cell to indicate that it now contains a main road. (TODO: Image console window after main roads). After generating the main roads, smaller roads are generated. This algorithm works on two levels. The first level calculates the width of the road by starting at its current position in the map and going right until it finds a main road. The next level works much the same way as the algorithm for generating the main roads, but it goes vertically instead of horizontally.(TODO: image) When the second level reaches the bottom of the map, it goes back to the first level. Road generation is complete when the end of the map is reached.(TODO: image)
