LaTeX - Added references to the bib file

--- a/LaTeX/citations.bib
+++ b/LaTeX/citations.bib
@@ -1,17 +1,105 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Niclas Olsson at 2017-04-17 17:48:41 +0200 
+%% Created for Niclas Olsson at 2017-05-10 22:59:48 +0200 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
 
-@article{DummyCitation,
-	Author = {DummyAuthor},
-	Date-Added = {2017-04-17 15:47:25 +0000},
-	Date-Modified = {2017-04-17 15:47:47 +0000},
-	Journal = {DummyJournal},
-	Title = {DummyTitle},
-	Year = {2017}}
+@article{TrafficGenerator,
+	Author = {Iria Prieto and Mikel Izal and Daniel Morato},
+	Date-Added = {2017-05-10 20:55:59 +0000},
+	Date-Modified = {2017-05-10 20:59:35 +0000},
+	Journal = {IEEE},
+	Title = {Traffic generator using Perlin Noise},
+	Year = {2012}}
+
+@article{WhatIsPCG,
+	Author = {Togelius, J. and Kastbjerg, E. and Schedl, D. and Yannakakis, G.N.},
+	Date-Added = {2017-05-10 20:54:04 +0000},
+	Date-Modified = {2017-05-10 20:59:48 +0000},
+	Journal = {Proceedings of the 2nd Workshop on Procedural Content Generation in Games},
+	Title = {What is procedural content generation?: Mario on the borderline},
+	Year = {2011}}
+
+@article{PCGGames,
+	Author = {Chaker, Noor},
+	Date-Added = {2017-05-10 20:52:30 +0000},
+	Date-Modified = {2017-05-10 20:53:55 +0000},
+	Journal = {?},
+	Title = {Procedural content generation in games},
+	Year = {2016}}
+
+@article{PerlinNoise,
+	Author = {Ken Perlin},
+	Date-Added = {2017-05-10 20:51:58 +0000},
+	Date-Modified = {2017-05-10 20:52:29 +0000},
+	Journal = {SIGGRAPH '02},
+	Title = {Improving noise},
+	Year = {2002}}
+
+@article{CachingCities,
+	Author = {Brian Cullen and Carrol O'Sullivan},
+	Date-Added = {2017-05-10 20:49:45 +0000},
+	Date-Modified = {2017-05-10 20:58:06 +0000},
+	Journal = {?},
+	Title = {A caching approach to real-time procedural generation of cities from gis data},
+	Year = {?}}
+
+@article{4DCities,
+	Author = {Basil Weber and Pascal M{\"u}ller and Peter Wonka and Markus Gross},
+	Date-Added = {2017-05-10 20:48:36 +0000},
+	Date-Modified = {2017-05-10 20:58:41 +0000},
+	Journal = {Computer Graphics forum},
+	Title = {Interactive Geometric Simulation of 4D Cities},
+	Year = {?}}
+
+@article{PseudoInfiniteCities,
+	Author = {Stefan Greuter, J. p.},
+	Date-Added = {2017-05-10 20:47:51 +0000},
+	Date-Modified = {2017-05-10 20:48:35 +0000},
+	Journal = {Graphite},
+	Title = {Real-time procedural generation of 'pseudo infinite' cities},
+	Year = {2003}}
+
+@article{ProceduralModeling,
+	Author = {Pascal M{\"u}ller},
+	Date-Added = {2017-05-10 20:46:41 +0000},
+	Date-Modified = {2017-05-10 20:59:10 +0000},
+	Journal = {SIGGRAPH '01},
+	Title = {Procedural Modeling of Cities},
+	Year = {2001}}
+
+@article{ProceduralModeling6,
+	Author = {Pascal M{\"u}ller},
+	Date-Added = {2017-05-10 20:45:44 +0000},
+	Date-Modified = {2017-05-10 20:59:24 +0000},
+	Journal = {ACM SIGGRAPH},
+	Title = {Procedural Modeling of Cities Part VI},
+	Year = {2006}}
+
+@article{InfiniteCities,
+	Author = {Markus Steinberger, M. K.},
+	Date-Added = {2017-05-10 20:44:33 +0000},
+	Date-Modified = {2017-05-10 20:45:43 +0000},
+	Journal = {Computer Graphics forum},
+	Title = {On-the-fly generation and rendering of inifnite cities on the GPU},
+	Year = {2014}}
+
+@article{SquarifiedTreemaps,
+	Author = {Fernando Marson, S. M.},
+	Date-Added = {2017-05-10 20:42:28 +0000},
+	Date-Modified = {2017-05-10 20:44:16 +0000},
+	Journal = {International Journal of Computer Games Technology},
+	Title = {Automatic Real-Time Generation of Floor Plans Based on Squarified Treemaps Algorithm},
+	Year = {2010}}
+
+@article{InverseDesign,
+	Author = {Carlos A. Vanegas},
+	Date-Added = {2017-05-10 20:31:38 +0000},
+	Date-Modified = {2017-05-10 20:33:11 +0000},
+	Journal = {ACM Transactions on Graphics},
+	Title = {Inverse design of urban procedural models},
+	Year = {2012}}
