--- a/LaTeX/citations.bib
+++ b/LaTeX/citations.bib
@@ -103,3 +103,82 @@
 	Journal = {ACM Transactions on Graphics},
 	Title = {Inverse design of urban procedural models},
 	Year = {2012}}
+
+@online{NoMansSkyplanets,
+	author = {No man's sky community},
+	title = {No man's sky planet count},
+	date = {2017-05-11},
+	url = {nomanssky.gamepedia.com/Planet},
+}
+
+@misc{NoMansSky,
+	author = {Hello Games},
+	title = {No Man's Sky},
+	date = {2016},
+	subtitle = {Video Game},
+}
+
+@online{BorderlandsWeapons,
+	author = {Borderlands community},
+	title = {Weapons in Borderlands},
+	date = {2017},
+	url = {borderlands.wikia.com/wiki/Weapons},
+}
+
+@misc{CivilizationCompany,
+	author = {Firaxis Games},
+	title = {Civilization IV},
+	date = {2005},
+	subtitle = {Video Games},
+}
+
+@misc{Minecraft,
+	author = {Mojang},
+	title = {Minecraft},
+	date = {2011},
+	subtitle = {Video Game},
+}
+
+@misc{Spelunky,
+	author = {Derek Yu, Mossmouth, LLC},
+	title = {Spelunky},
+	date = {2008},
+	subtitle = {Video Game},
+	howpublished = {Mossmouth, LLC, Microsoft Studios},
+}
+
+@online{MinecraftSize,
+	author = {Minecraft Community},
+	title = {Minecraft size of the world},
+	date = {2017},
+	url = {http://minecraft.gamepedia.com/The_Overworld},
+}
+
+@misc{Borderlands,
+	author = {Gearbox Software},
+	title = {Borderlands},
+	date = {2009},
+	subtitle = {Video Game},
+	howpublished = {2K Games, Feral Interactive},
+}
+
+@misc{Elite,
+	author = {David Braben, Ian Bell},
+	title = {Elite},
+	date = {1984},
+	subtitle = {Video Game},
+	howpublished = {Acornsoft, Firebird, Imagineer},
+}
+
+@online{SpeedTree,
+	author = {SpeedTree},
+	title = {SpeedTree},
+	date = {2017},
+	url = {http://www.speedtree.com},
+}
+@online{SpeedTreeMovies,
+	author = {SpeedTree},
+	title = {SpeedTree in movies},
+	date = {2017},
+	url = {http://www.speedtree.com/idv-company-profile.php},
+}
