LaTeX - Polishing and adding references and modified perlin noise in method.tex

--- a/LaTeX/thesis.tex
+++ b/LaTeX/thesis.tex
@@ -1,4 +1,6 @@
 \documentclass[12pt]{article}
+\usepackage{graphicx}
+\usepackage{subcaption}
 
 % Meta data
 \title{Thesis Title}
@@ -44,5 +46,5 @@
 	% References
 	\newpage
 	\bibliographystyle{IEEEtran}
-	\bibliography{./citations.bib}
+	\bibliography{./citations}
 \end{document}
