--- a/LaTeX/method.tex
+++ b/LaTeX/method.tex
@@ -34,10 +34,35 @@
 		\end{equation}
 		
 		\par
-		After the districts, have expanded from their core position the borders are clear to see. There are often straight lines where on one side of the line there are skyscrapers and on the other there are industry. To negate this effect somewhat \textit{border competition} was implemented. The algorithm finds every cell where two different districts meet (i.e. One district in the cell and a new district in the cell to the right). 
+		After the districts have expanded from their core position, the borders are clear to see. There are often clear lines where on one side there are skyscrapers and on the other there are industry for example. To negate this effect somewhat \textit{border competition} was implemented. The algorithm finds every cell where two different districts meet (i.e. One district in the cell and another district in the cell to the right). The competition range is 30\% of the total grid size. From the border cells we expand half the competition range to the left and the other half to the right; this is done in the X-axis only. For every cell that is in the competition range the two districts compete with modified Perlin noise. If the Perlin noise is above the value of 0.5 the district to the right wins, otherwise the district to the left wins. The winning district takes ownership of the cell.
 		
-		\par
-		Explain Perlin noise in this context
+				\subsection{Modified Perlin noise}
+		Depending on the \textit{frequency} and \textit{modifications} of the noise the results can be very different. The steps at which the data is sampled is what the \textit{frequency} is. If the results of the Perlin noise is changed further this is what \textit{modifications} is.
+		The modified Perlin noise is used when generating the districts. This noise has much sharper changes in values than regular Perlin noise does. Perlin noise without modification returns a value very close to 0.5 most of the time. This pose a problem when generating certain things. The districts core position for example should have some spread across the city and not be close to each nother. The Perlin noise is modified in the following way when generating a districts X-axis position; and used similarly for other parts of the generation:
+		
+		\texttt{float noise = 20 * this->noise->generate(1.134 * x, 1.22 * y);
+			noise = (noise - floor(noise));}
+		
+		The \textit{frequency} of this modified noise is 1.134 on the X-axis and the \textit{modification} is \texttt{noise = (noise - floor(noise))}.
+		The difference between modified and not modified Perlin noise is visualized in \textit{Figure \ref{fig:normal-and-modified-perlin}}.
+		
+		\begin{figure}[h]
+			\begin{subfigure}{0.5\textwidth}
+				\centering
+				\includegraphics[width=0.9\linewidth]{"Images/floor perlin"}
+				\caption[Floored Perlin noise]{Modified Perlin noise}
+				\label{fig:modified-perlin}
+			\end{subfigure}
+			\begin{subfigure}{0.5\textwidth}
+				\centering
+				\includegraphics[width=0.9\linewidth]{"Images/normal perlin"}
+				\caption[Normal Perlin noise]{Normal Perlin noise}
+				\label{fig:normal-perlin}
+			\end{subfigure}
+			\caption{Different uses of Perlin noise}
+			\label{fig:normal-and-modified-perlin}
+		\end{figure}
+		    
 		
 		\subsubsection{Blocks}
 		After generating districts, the roads are generated (effectively creating blocks). The first step is to generate the main roads running through the city. Main roads always run vertically through the city, no matter what parameters are used. To figure out where the main roads should be, Perlin noise is used. By going through the cells of the map horizontally and checking if the Perlin noise for that cell is above a certain threshold, Elicras determines if that cell should be a main road or not. Since the main roads run through the whole city, the algorithm only goes through the first row of cells. If the algorithm determines that a cell should contain a main road, it sets the value of that cell to indicate that it now contains a main road. (TODO: Image console window after main roads). After generating the main roads, smaller roads are generated. This algorithm works on two levels. The first level calculates the width of the road by starting at its current position in the map and going right until it finds a main road. The next level works much the same way as the algorithm for generating the main roads, but it goes vertically instead of horizontally.(TODO: image) When the second level reaches the bottom of the map, it goes back to the first level. Road generation is complete when the end of the map is reached.(TODO: image)
