LaTeX - Added more references

--- a/LaTeX/citations.bib
+++ b/LaTeX/citations.bib
@@ -182,3 +182,26 @@
 	date = {2017},
 	url = {http://www.speedtree.com/idv-company-profile.php},
 }
+
+@inproceedings{AutonomousTimeVarying,
+	author = {M. Honda, K. Mizuno, Y. Fukui},
+	editor = {international Conference on Cyberworlds},
+	title = {Generating autonomous time-varying virtual cities},
+	booktitle = {booktitle},
+	date = {2004},
+}
+
+@article{InteractiveProceduralStreet,
+	author = {Peter Wonka, Pascal Muller, Eugene Zhang},
+	title = {Interactive Procedural Street Modeling},
+	journaltitle = {ACM SIGGRAPH
+	Article No. 103},
+	date = {2008},
+}
+
+@article{AdvancedProceduralModel,
+	author = {Pascal Müller, Michael Schwarz},
+	title = {Advanced procedural modeling of architecture},
+	journaltitle = {ACM Transactions on Graphics (TOG) - Proceedings of ACM SIGGRAPH},
+	date = {2015},
+}
