LaTeX - Wrote about Perlin noise

--- a/LaTeX/citations.bib
+++ b/LaTeX/citations.bib
@@ -1,12 +1,20 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Niclas Olsson at 2017-05-10 22:59:48 +0200 
+%% Created for Niclas Olsson at 2017-05-11 01:19:13 +0200 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@book{TexturingModeling,
+	Author = {David S. Ebert},
+	Date-Added = {2017-05-10 23:15:15 +0000},
+	Date-Modified = {2017-05-10 23:19:07 +0000},
+	Publisher = {Morgan Kaufman},
+	Title = {Texturing \& modeling: a procedural approach},
+	Year = {2003}}
 
 @article{TrafficGenerator,
 	Author = {Iria Prieto and Mikel Izal and Daniel Morato},
@@ -105,80 +113,75 @@
 	Year = {2012}}
 
 @online{NoMansSkyplanets,
-	author = {No man's sky community},
-	title = {No man's sky planet count},
-	date = {2017-05-11},
-	url = {nomanssky.gamepedia.com/Planet},
-}
+	Author = {No man's sky community},
+	Date = {2017-05-11},
+	Title = {No man's sky planet count},
+	Url = {nomanssky.gamepedia.com/Planet},
+	Bdsk-Url-1 = {nomanssky.gamepedia.com/Planet}}
 
 @misc{NoMansSky,
-	author = {Hello Games},
-	title = {No Man's Sky},
-	date = {2016},
-	subtitle = {Video Game},
-}
+	Author = {Hello Games},
+	Date = {2016},
+	Subtitle = {Video Game},
+	Title = {No Man's Sky}}
 
 @online{BorderlandsWeapons,
-	author = {Borderlands community},
-	title = {Weapons in Borderlands},
-	date = {2017},
-	url = {borderlands.wikia.com/wiki/Weapons},
-}
+	Author = {Borderlands community},
+	Date = {2017},
+	Title = {Weapons in Borderlands},
+	Url = {borderlands.wikia.com/wiki/Weapons},
+	Bdsk-Url-1 = {borderlands.wikia.com/wiki/Weapons}}
 
 @misc{CivilizationCompany,
-	author = {Firaxis Games},
-	title = {Civilization IV},
-	date = {2005},
-	subtitle = {Video Games},
-}
+	Author = {Firaxis Games},
+	Date = {2005},
+	Subtitle = {Video Games},
+	Title = {Civilization IV}}
 
 @misc{Minecraft,
-	author = {Mojang},
-	title = {Minecraft},
-	date = {2011},
-	subtitle = {Video Game},
-}
+	Author = {Mojang},
+	Date = {2011},
+	Subtitle = {Video Game},
+	Title = {Minecraft}}
 
 @misc{Spelunky,
-	author = {Derek Yu, Mossmouth, LLC},
-	title = {Spelunky},
-	date = {2008},
-	subtitle = {Video Game},
-	howpublished = {Mossmouth, LLC, Microsoft Studios},
-}
+	Author = {Derek Yu, Mossmouth, LLC},
+	Date = {2008},
+	Howpublished = {Mossmouth, LLC, Microsoft Studios},
+	Subtitle = {Video Game},
+	Title = {Spelunky}}
 
 @online{MinecraftSize,
-	author = {Minecraft Community},
-	title = {Minecraft size of the world},
-	date = {2017},
-	url = {http://minecraft.gamepedia.com/The_Overworld},
-}
+	Author = {Minecraft Community},
+	Date = {2017},
+	Title = {Minecraft size of the world},
+	Url = {http://minecraft.gamepedia.com/The_Overworld},
+	Bdsk-Url-1 = {http://minecraft.gamepedia.com/The_Overworld}}
 
 @misc{Borderlands,
-	author = {Gearbox Software},
-	title = {Borderlands},
-	date = {2009},
-	subtitle = {Video Game},
-	howpublished = {2K Games, Feral Interactive},
-}
+	Author = {Gearbox Software},
+	Date = {2009},
+	Howpublished = {2K Games, Feral Interactive},
+	Subtitle = {Video Game},
+	Title = {Borderlands}}
 
 @misc{Elite,
-	author = {David Braben, Ian Bell},
-	title = {Elite},
-	date = {1984},
-	subtitle = {Video Game},
-	howpublished = {Acornsoft, Firebird, Imagineer},
-}
+	Author = {David Braben, Ian Bell},
+	Date = {1984},
+	Howpublished = {Acornsoft, Firebird, Imagineer},
+	Subtitle = {Video Game},
+	Title = {Elite}}
 
 @online{SpeedTree,
-	author = {SpeedTree},
-	title = {SpeedTree},
-	date = {2017},
-	url = {http://www.speedtree.com},
-}
+	Author = {SpeedTree},
+	Date = {2017},
+	Title = {SpeedTree},
+	Url = {http://www.speedtree.com},
+	Bdsk-Url-1 = {http://www.speedtree.com}}
+
 @online{SpeedTreeMovies,
-	author = {SpeedTree},
-	title = {SpeedTree in movies},
-	date = {2017},
-	url = {http://www.speedtree.com/idv-company-profile.php},
-}
+	Author = {SpeedTree},
+	Date = {2017},
+	Title = {SpeedTree in movies},
+	Url = {http://www.speedtree.com/idv-company-profile.php},
+	Bdsk-Url-1 = {http://www.speedtree.com/idv-company-profile.php}}
