--- a/LaTeX/theoretical_framework.tex
+++ b/LaTeX/theoretical_framework.tex
@@ -9,12 +9,29 @@
 		\subsubsection{Gradient noise}
 		Gradient noise differs from value noise by generating gradient vectors at each lattice point, instead of raw values. To calculate the noise value of a point, three steps are taken. First, a vector is calculated from each lattice point to the point.  Then, the dot product between this vector and the gradient vector at the corresponding lattice point is calculated. Finally, the noise value is calculated by interpolating between the dot product results.
 		
+		\begin{figure}[h]
+			\begin{subfigure}{0.5\textwidth}
+				\centering
+				\includegraphics[width=0.9\linewidth]{"Images/gradient_vectors"}
+				\caption{Gradient vectors}
+				\label{fig:gradient_vectors}
+			\end{subfigure}
+			\begin{subfigure}{0.5\textwidth}
+				\centering
+				\includegraphics[width=0.9\linewidth]{"Images/vectors"}
+				\caption{Lattice-to-point vectors}
+				\label{fig:lattice-vectors}
+			\end{subfigure}
+			\caption{Noise vectors}
+			\label{fig:noise_vectors}
+		\end{figure}
+		
 		\subsubsection{Perlin noise}
 		Perlin noise is a type of gradient noise. It was developed by Ken Perlin in 1983 and improved in 2002\cite{PerlinNoise}. Perlin noise works in one, two and three dimensions, but for the purpose of this explanation two-dimensional Perlin noise will be used. The algorithm expects two arguments, an x and a y coordinate. These values are normalized so as to reside between two integer lattices, creating a point. A vector from each lattice point to this point is calculated. One of the gradient vectors is chosen at random based on the normalized coordinates. The dot product between this gradient vector and the vector to the point is calculated at each lattice point. The final value is calculated by interpolating between these dot products. Perlin noise interpolates between values using a proprietary ease curve called fade. It has the form \begin{math}6t^5-15t^4-10t^3\end{math}.
 		\begin{figure}
 			\centering
 			\includegraphics[width=0.5\linewidth]{"images/fade"}
-			\caption{Perlin's easy curve called fade}
+			\caption{Perlin's ease curve called fade}
 			\label{fig:fade}
 		\end{figure}
 	
