LaTeX - Fixed error in bib file

--- a/LaTeX/citations.bib
+++ b/LaTeX/citations.bib
@@ -1,7 +1,7 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Niclas Olsson at 2017-05-11 01:19:13 +0200 
+%% Created for Niclas Olsson at 2017-05-11 15:05:31 +0200 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -154,8 +154,9 @@
 @online{MinecraftSize,
 	Author = {Minecraft Community},
 	Date = {2017},
+	Date-Modified = {2017-05-11 13:05:30 +0000},
 	Title = {Minecraft size of the world},
-	Url = {http://minecraft.gamepedia.com/The_Overworld},
+	Url = {http://minecraft.gamepedia.com/The\_Overworld},
 	Bdsk-Url-1 = {http://minecraft.gamepedia.com/The_Overworld}}
 
 @misc{Borderlands,
@@ -185,31 +186,22 @@
 	Title = {SpeedTree in movies},
 	Url = {http://www.speedtree.com/idv-company-profile.php},
 	Bdsk-Url-1 = {http://www.speedtree.com/idv-company-profile.php}}
-	author = {SpeedTree},
-	title = {SpeedTree in movies},
-	date = {2017},
-	url = {http://www.speedtree.com/idv-company-profile.php},
-}
 
 @inproceedings{AutonomousTimeVarying,
-	author = {M. Honda, K. Mizuno, Y. Fukui},
-	editor = {international Conference on Cyberworlds},
-	title = {Generating autonomous time-varying virtual cities},
-	booktitle = {booktitle},
-	date = {2004},
-}
+	Author = {M. Honda, K. Mizuno, Y. Fukui},
+	Booktitle = {booktitle},
+	Date = {2004},
+	Editor = {international Conference on Cyberworlds},
+	Title = {Generating autonomous time-varying virtual cities}}
 
 @article{InteractiveProceduralStreet,
-	author = {Peter Wonka, Pascal Muller, Eugene Zhang},
-	title = {Interactive Procedural Street Modeling},
-	journaltitle = {ACM SIGGRAPH
-	Article No. 103},
-	date = {2008},
-}
+	Author = {Peter Wonka, Pascal Muller, Eugene Zhang},
+	Date = {2008},
+	Journaltitle = {ACM SIGGRAPH Article No. 103},
+	Title = {Interactive Procedural Street Modeling}}
 
 @article{AdvancedProceduralModel,
-	author = {Pascal Müller, Michael Schwarz},
-	title = {Advanced procedural modeling of architecture},
-	journaltitle = {ACM Transactions on Graphics (TOG) - Proceedings of ACM SIGGRAPH},
-	date = {2015},
-}
+	Author = {Pascal M{\"u}ller, Michael Schwarz},
+	Date = {2015},
+	Journaltitle = {ACM Transactions on Graphics (TOG) - Proceedings of ACM SIGGRAPH},
+	Title = {Advanced procedural modeling of architecture}}
