LaTeX - Added more references

--- a/LaTeX/citations.bib
+++ b/LaTeX/citations.bib
@@ -1,12 +1,18 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Niclas Olsson at 2017-05-11 15:05:31 +0200 
+%% Created for Niclas Olsson at 2017-05-11 15:16:53 +0200 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@webpage{QtWebpage,
+	Date-Added = {2017-05-11 13:14:29 +0000},
+	Date-Modified = {2017-05-11 13:16:48 +0000},
+	Lastchecked = {2017-05-11},
+	Url = {https://www.qt.io}}
 
 @book{TexturingModeling,
 	Author = {David S. Ebert},
@@ -204,4 +210,28 @@
 	Author = {Pascal M{\"u}ller, Michael Schwarz},
 	Date = {2015},
 	Journaltitle = {ACM Transactions on Graphics (TOG) - Proceedings of ACM SIGGRAPH},
-	Title = {Advanced procedural modeling of architecture}}
+	Title = {Advanced procedural modeling of architecture}
+}
+
+@book{QtProgramming,
+	author={Dalheimer,Matthias K.},
+	year={2002},
+	title={Programming with Qt : Writing Portable GUI applications on Unix and Win32},
+	publisher={O'Reilly Media},
+	address={Sebastopol},
+	edition={2;2nd;},
+	keywords={C++ (Computer program language); Computer programming; Graphical user interfaces (Computer systems); Qt (Electronic resource)},
+	isbn={0596000642;9780596000646;},
+	language={English},
+}
+
+@book{Win32Programming,
+	author={Yuan,Feng},
+	year={2000},
+	title={Windows Graphics Programming Win32 GDI and DirectDraw},
+	publisher={Prentice Hall},
+	edition={First},
+	keywords={Graphics; Microsoft; DirectDraw},
+	isbn={0130869856;9780130869852;},
+	language={English},
+}
