LaTeX - Fixed some authors in bib

--- a/LaTeX/citations.bib
+++ b/LaTeX/citations.bib
@@ -1,7 +1,7 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Niclas Olsson at 2017-05-11 15:16:53 +0200 
+%% Created for Niclas Olsson at 2017-05-12 00:30:28 +0200 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -12,7 +12,8 @@
 	Date-Added = {2017-05-11 13:14:29 +0000},
 	Date-Modified = {2017-05-11 13:16:48 +0000},
 	Lastchecked = {2017-05-11},
-	Url = {https://www.qt.io}}
+	Url = {https://www.qt.io},
+	Bdsk-Url-1 = {https://www.qt.io}}
 
 @book{TexturingModeling,
 	Author = {David S. Ebert},
@@ -151,8 +152,9 @@
 	Title = {Minecraft}}
 
 @misc{Spelunky,
-	Author = {Derek Yu, Mossmouth, LLC},
+	Author = {Derek Yu},
 	Date = {2008},
+	Date-Modified = {2017-05-11 22:30:28 +0000},
 	Howpublished = {Mossmouth, LLC, Microsoft Studios},
 	Subtitle = {Video Game},
 	Title = {Spelunky}}
@@ -173,8 +175,9 @@
 	Title = {Borderlands}}
 
 @misc{Elite,
-	Author = {David Braben, Ian Bell},
+	Author = {David Braben and Ian Bell},
 	Date = {1984},
+	Date-Modified = {2017-05-11 22:29:31 +0000},
 	Howpublished = {Acornsoft, Firebird, Imagineer},
 	Subtitle = {Video Game},
 	Title = {Elite}}
@@ -194,44 +197,44 @@
 	Bdsk-Url-1 = {http://www.speedtree.com/idv-company-profile.php}}
 
 @inproceedings{AutonomousTimeVarying,
-	Author = {M. Honda, K. Mizuno, Y. Fukui},
+	Author = {M. Honda and K. Mizuno and Y. Fukui},
 	Booktitle = {booktitle},
 	Date = {2004},
+	Date-Modified = {2017-05-11 22:29:44 +0000},
 	Editor = {international Conference on Cyberworlds},
 	Title = {Generating autonomous time-varying virtual cities}}
 
 @article{InteractiveProceduralStreet,
-	Author = {Peter Wonka, Pascal Muller, Eugene Zhang},
+	Author = {Peter Wonka and Pascal Muller and Eugene Zhang},
 	Date = {2008},
+	Date-Modified = {2017-05-11 22:29:58 +0000},
 	Journaltitle = {ACM SIGGRAPH Article No. 103},
 	Title = {Interactive Procedural Street Modeling}}
 
 @article{AdvancedProceduralModel,
-	Author = {Pascal M{\"u}ller, Michael Schwarz},
+	Author = {Pascal M{\"u}ller and Michael Schwarz},
 	Date = {2015},
+	Date-Modified = {2017-05-11 22:29:11 +0000},
 	Journaltitle = {ACM Transactions on Graphics (TOG) - Proceedings of ACM SIGGRAPH},
-	Title = {Advanced procedural modeling of architecture}
-}
+	Title = {Advanced procedural modeling of architecture}}
 
 @book{QtProgramming,
-	author={Dalheimer,Matthias K.},
-	year={2002},
-	title={Programming with Qt : Writing Portable GUI applications on Unix and Win32},
-	publisher={O'Reilly Media},
-	address={Sebastopol},
-	edition={2;2nd;},
-	keywords={C++ (Computer program language); Computer programming; Graphical user interfaces (Computer systems); Qt (Electronic resource)},
-	isbn={0596000642;9780596000646;},
-	language={English},
-}
+	Address = {Sebastopol},
+	Author = {Dalheimer,Matthias K.},
+	Edition = {2;2nd;},
+	Isbn = {0596000642;9780596000646;},
+	Keywords = {C++ (Computer program language); Computer programming; Graphical user interfaces (Computer systems); Qt (Electronic resource)},
+	Language = {English},
+	Publisher = {O'Reilly Media},
+	Title = {Programming with Qt : Writing Portable GUI applications on Unix and Win32},
+	Year = {2002}}
 
 @book{Win32Programming,
-	author={Yuan,Feng},
-	year={2000},
-	title={Windows Graphics Programming Win32 GDI and DirectDraw},
-	publisher={Prentice Hall},
-	edition={First},
-	keywords={Graphics; Microsoft; DirectDraw},
-	isbn={0130869856;9780130869852;},
-	language={English},
-}
+	Author = {Yuan,Feng},
+	Edition = {First},
+	Isbn = {0130869856;9780130869852;},
+	Keywords = {Graphics; Microsoft; DirectDraw},
+	Language = {English},
+	Publisher = {Prentice Hall},
+	Title = {Windows Graphics Programming Win32 GDI and DirectDraw},
+	Year = {2000}}
